Start changing dashboard style
Also fix a few overrides.

--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -1,4 +1,5 @@
 section.course-info {
+    margin-top: 0;
 
     header.course-profile {
         .square(auto);
@@ -83,7 +84,6 @@ section.course-info {
                             margin-right: 10px;
 
                             span {
-                                font-family: 'FontAwesome';
                                 font-size: 42px;
                                 line-height: 42px;
                                 transition: all .1s ease-in;
@@ -228,7 +228,7 @@ section.course-info {
                         .teacher-image {
                             .square(auto);
 
-                            margin: 3px 17px 0 0;
+                            margin: 5px 12px 0 0;
 
                             img {
                                 min-height: 0;
