--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -18,6 +18,11 @@ h3 {
     color: inherit;
 }
 
+h4 {
+    color: @gg-blue;
+    font-weight: 500;
+}
+
 p {
     color: inherit;
     font: inherit;
@@ -38,6 +43,11 @@ p a, p a:link, p a:visited {
 }
 
 label {
+    color: inherit;
+    font: inherit;
+}
+
+span {
     color: inherit;
     font: inherit;
 }
