--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -13,7 +13,10 @@
 @gg-emerald: #2ecc71;
 @gg-orange: #f39c12;
 
+@gg-disabled-grey: #bdc3c7;
 @gg-border-grey: #ddd;
+
+@hr-border: @gg-border-grey;
 
 
 ////////////////////////////////////////////////////////////////////////
@@ -33,3 +36,12 @@
 @font-size-h1: 32px;
 @font-size-h2: 20px;
 @font-size-h3: 18px;
+@font-size-h4: 18px;
+
+
+////////////////////////////////////////////////////////////////////////
+// Layout                                                             //
+////////////////////////////////////////////////////////////////////////
+
+@layout-top-spacing: 40px;
+@layout-bottom-spacing: 40px;
