--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -68,21 +68,7 @@ header.global, header.global.slim,
             margin: 15px 0 0 0;
 
             > li > a.cta-login {
-                .btn();
-                .button-variant(@gg-blue; @white; @gg-blue);
-
-                transition: all .1s ease-in;
-                box-shadow: none;
-                padding: 8px 20px;
-                font-size: 17px;
-                font-weight: 400;
-
-                &:hover, &:active, &:focus {
-                    background-color: @gg-blue;
-                    border-color: transparent;
-                    color: @white;
-                    box-shadow: none;
-                }
+                .edx-btn(@gg-blue, @white);
             }
         }
 
@@ -90,26 +76,14 @@ header.global, header.global.slim,
             margin: 15px 0 0 0;
 
             > li.primary > a {
-                .btn();
-                .button-variant(@gg-blue; @white; @gg-blue);
+                .edx-btn(@gg-blue, @white);
 
-                margin: 0;
                 border-radius: 0;
-                outline: none;
-                transition: all .1s ease-in;
-                box-shadow: none;
-                text-shadow: none;
-                font-size: 17px;
-                padding: 8px 20px;
-                font-weight: 400;
                 border-top-left-radius: 4px;
                 border-bottom-left-radius: 4px;
 
-                &:hover, &:active, &:focus, &.dropdown.active {
-                    background-color: @gg-blue;
-                    border-color: transparent;
-                    color: @white;
-                    box-shadow: none;
+                &.dropdown.active {
+                    .edx-btn-hover(@gg-blue, @white);
                 }
 
                 &.dropdown {
