--- a/static/less/mixins/main.less
+++ b/static/less/mixins/main.less
@@ -1,50 +1,3 @@
-.edx-container {
-    .square(auto);
-    .container();
-
-    min-width: 0;
-    max-width: none;
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
-.edx-btn(@fg-color, @bg-color) {
-    font: inherit;
-    background: none;
-
-    .btn();
-    .button-variant(@fg-color, @bg-color, @fg-color);
-
-    text-shadow: none;
-    text-overflow: ellipsis;
-    transition: all .1s ease-in;
-    box-shadow: none;
-    margin: 0;
-    padding: 0.5em 1.2em;
-    outline: none;
-    overflow: hidden;
-
-    &:hover, &:active, &:focus {
-        .edx-btn-hover(@fg-color, @bg-color);
-    }
-}
-
-.edx-btn-hover(@fg-color, @bg-color) {
-    background: none;
-    background-color: @fg-color;
-    color: @bg-color;
-    border-color: @bg-color;
-    box-shadow: none;
-    outline: none;
-
-    & when (@bg-color = @white) {
-        border-color: @fg-color;
-    }
-}
-
-.table-rounded(@radius: 4px) {
-    border-collapse: separate;
-    border-spacing: 0;
-    border-radius: @radius;
-    overflow: hidden;
-}
+@import 'container.less';
+@import 'button.less';
+@import 'table.less';
