Contextualize global elements

--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -1,6 +1,4 @@
-header.global, header.global.slim,
-.view-login header.global, .view-login header.global.slim,
-.view-register header.global, .view-register header.global.slim {
+header.global, header.global.slim {
     .square(auto);
     .navbar();
     .navbar-default();
