--- a/static/less/global/main.less
+++ b/static/less/global/main.less
@@ -1,6 +1,9 @@
-body {
+body,
+.view-login,
+.view-register,
+.view-passwordreset {
     background-color: @gg-grey;
-}
 
-@import 'header.less';
-@import 'footer.less';
+    @import 'header.less';
+    @import 'footer.less';
+}
