--- a/static/less/mixins/button.less
+++ b/static/less/mixins/button.less
@@ -14,6 +14,10 @@
     outline: none;
     overflow: hidden;
 
+    & when (@fg-color = @white) {
+        border-color: @bg-color;
+    }
+
     &:hover, &:active, &:focus {
         .edx-btn-hover(@fg-color, @bg-color);
     }
