--- a/static/less/global/modal.less
+++ b/static/less/global/modal.less
@@ -5,9 +5,15 @@
     background: none;
     box-shadow: none;
     bottom: auto;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     width: 500px;
+
+    // Ugly required things go here:
+    top: 1.5 * @layout-header-height !important;
+    position: fixed !important;
+    left: 0 !important;
+    margin-left: auto !important;
 
     &.video-modal {
         .edx-container();
@@ -19,9 +25,9 @@
             padding: 0 0 56.25% 0;
 
             iframe {
+                .square(100%);
+
                 position: absolute;
-                width: 100%;
-                height: 100%;
                 left: 0;
                 top: 0;
             }
