--- a/templates/dashboard/_dashboard_course_listing.html
+++ b/templates/dashboard/_dashboard_course_listing.html
@@ -16,7 +16,7 @@
   if cert_name_long == "":
     cert_name_long = settings.CERT_NAME_LONG
 
-  course_about_url = "https://edx.courses.ionis-group.com{path}".format(
+  course_about_url = "https://courses.ionisx.com{path}".format(
                       path=reverse('about_course', args=[course.id]))
 %>
 
