--- a/templates/static_templates/theme-tos.html
+++ b/templates/static_templates/theme-tos.html
@@ -12,7 +12,7 @@
   <div class="inner-wrapper">
     <h2>Préambule</h2>
 
-    <p>Les présentes Conditions générales d’utilisation décrivent les termes et conditions dans lesquels IONIS Education Group fournit un service de création et d’hébergement de contenu sur son site <a href="http://courses.ionis-group.com/" target="_blank">courses.ionis-group.com</a> (ci-après désigné par « site »).</p>
+    <p>Les présentes Conditions générales d’utilisation décrivent les termes et conditions dans lesquels IONIS Education Group fournit un service de création et d’hébergement de contenu sur son site <a href="https://ionisx.com/" target="_blank">ionisx.com</a> (ci-après désigné par « site »).</p>
 
     <p>L’accès à ce site est subordonné au respect des présentes Conditions générales d’utilisation. Tout internaute souhaitant y accéder doit avoir pris connaissance préalablement de ces Conditions générales d’utilisation ainsi que ses deux annexes que sont la Charte Utilisateurs et la Politique de Confidentialité et s’engage à les respecter sans réserve.</p>
 
@@ -22,7 +22,7 @@
 
     <p>En s’inscrivant sur le site de IONISx, l’utilisateur est réputé avoir accepté, sans restriction ni réserve, les Conditions Générales d’Utilisation, la Charte Utilisateurs et la Politique de Confidentialité. Tout accès et/ou utilisation de IONISx est subordonné au respect de l’ensemble des termes des Conditions Générales d’Utilisation et de ses deux annexes qui en font partie intégrante, sans restriction ni réserve.</p>
 
-    <p>Si vous ne comprenez pas ces termes ou que vous ne souhaitez pas y être liés légalement, nous vous invitons à ne pas utiliser le site internet de IONISx, <a href="http://courses.ionis-group.com/" target="_blank">courses.ionis-group.com</a>.</p>
+    <p>Si vous ne comprenez pas ces termes ou que vous ne souhaitez pas y être liés légalement, nous vous invitons à ne pas utiliser le site internet de IONISx, <a href="https://ionisx.com/" target="_blank">ionisx.com</a>.</p>
 
     <p>IONISx se réserve donc le droit de refuser l'accès ou d’exclure, sans préjudice de tout dommage et intérêt pour l’utilisateur et sans notification préalable, tout utilisateur qui ne respecterait pas les Conditions Générales d'Utilisation, la Charte Utilisateurs et la Politique de Confidentialité, et également de supprimer toute contribution ou commentaire notamment en cas d’infraction au regard de la loi française de même qu’en cas de réclamation d’un tiers.</p>
 
@@ -145,7 +145,7 @@
 
     <h2>Notifications</h2>
 
-    <p>Sauf stipulation expresse contraire, toute notification envoyée à IONISx doit être adressée via <a href="/contact/">notre formulaire en ligne</a> dans la rubrique « Contact ». Toute notification qui vous est destinée sera envoyée en principe par e-mail à l'adresse que vous avez communiquée à IONISx lors de votre inscription.</p>
+    <p>Sauf stipulation expresse contraire, toute notification envoyée à IONISx doit être adressée via <a href="https://ionisx.com/contact/">notre formulaire en ligne</a> dans la rubrique « Contact ». Toute notification qui vous est destinée sera envoyée en principe par e-mail à l'adresse que vous avez communiquée à IONISx lors de votre inscription.</p>
 
     <h2>Juridiction compétente</h2>
 
