--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -2,7 +2,7 @@
 <div class="wrapper wrapper-footer">
   <footer>
     <p>
-      <a href="https://courses.ionis-group.com/contact">Contactez-nous</a>
+      <a href="https://ionisx.com/contact">Contactez-nous</a>
       | © IONISx
     </p>
   </footer>
