--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -48,3 +48,10 @@
 
 @layout-header-height: 100px;
 @layout-footer-height: 81px;
+
+
+////////////////////////////////////////////////////////////////////////
+// Misc                                                               //
+////////////////////////////////////////////////////////////////////////
+
+@default-border-radius: 4px;
