--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -66,7 +66,7 @@ header.global, header.global.slim {
             margin: 15px 0 0 0;
 
             > li > a.cta-login {
-                .edx-btn(@gg-blue, @white);
+                .ionisx-btn(@gg-blue, @white);
             }
         }
 
@@ -74,14 +74,14 @@ header.global, header.global.slim {
             margin: 15px 0 0 0;
 
             > li.primary > a {
-                .edx-btn(@gg-blue, @white);
+                .ionisx-btn(@gg-blue, @white);
 
                 border-radius: 0;
                 border-top-left-radius: 4px;
                 border-bottom-left-radius: 4px;
 
                 &.dropdown.active {
-                    .edx-btn-hover(@gg-blue, @white);
+                    .ionisx-btn-hover(@gg-blue, @white);
                 }
 
                 &.dropdown {
