--- a/static/less/global/modal.less
+++ b/static/less/global/modal.less
@@ -95,7 +95,7 @@
             }
 
             input[type=submit] {
-                .edx-btn(@white, @gg-alt-blue);
+                .ionisx-btn(@white, @gg-alt-blue);
             }
         }
     }
