--- a/static/less/mixins/button.less
+++ b/static/less/mixins/button.less
@@ -1,4 +1,4 @@
-.edx-btn(@fg-color, @bg-color) {
+.ionisx-btn(@fg-color, @bg-color) {
     font: inherit;
     background: none;
 
@@ -19,11 +19,11 @@
     }
 
     &:hover, &:active, &:focus {
-        .edx-btn-hover(@fg-color, @bg-color);
+        .ionisx-btn-hover(@fg-color, @bg-color);
     }
 }
 
-.edx-btn-hover(@fg-color, @bg-color) {
+.ionisx-btn-hover(@fg-color, @bg-color) {
     background: none;
     background-color: @fg-color;
     color: @bg-color;
