--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -112,7 +112,7 @@ section.course-info {
                             padding: 0;
 
                             strong, &.register, &.add-to-cart {
-                                .edx-btn(@white, @gg-alt-blue);
+                                .ionisx-btn(@white, @gg-alt-blue);
 
                                 padding: 7px 0;
                             }
