--- a/static/less/pages/register.less
+++ b/static/less/pages/register.less
@@ -20,7 +20,7 @@
         form {
             .form-actions {
                 button[type=submit] {
-                    .edx-btn(@white, @gg-alt-blue);
+                    .ionisx-btn(@white, @gg-alt-blue);
                 }
             }
         }
