--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -187,7 +187,7 @@
                 }
 
                 .enter-course {
-                    .edx-btn(@white, @gg-emerald);
+                    .ionisx-btn(@white, @gg-emerald);
 
                     font-size: 0.9em;
                     position: absolute;
