--- a/static/less/global/footer.less
+++ b/static/less/global/footer.less
@@ -4,7 +4,7 @@
     background-color: @gg-blue;
 
     > footer {
-        .edx-container();
+        .ionisx-container();
 
         > p {
             color: @white;
