--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -16,7 +16,7 @@ header.global, header.global.slim {
     }
 
     > nav {
-        .edx-container();
+        .ionisx-container();
 
         padding-top: 15px;
         padding-bottom: 15px;
