--- a/static/less/global/modal.less
+++ b/static/less/global/modal.less
@@ -16,7 +16,7 @@
     margin-left: auto !important;
 
     &.video-modal {
-        .edx-container();
+        .ionisx-container();
 
         .inner-wrapper {
             .square(auto);
