--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -3,7 +3,7 @@ body,
 .view-register,
 .view-passwordreset {
     // .container {
-    //     .edx-container();
+    //     .ionisx-container();
     // }
 
     // .static-container,
@@ -31,7 +31,7 @@ body,
 
 .content-wrapper {
     .introduction {
-        .edx-container();
+        .ionisx-container();
 
         margin-top: @layout-top-spacing;
         background: none;
