--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -11,7 +11,7 @@ section.course-info {
         padding: 80px 0;
 
         .intro-inner-wrapper {
-            .edx-container();
+            .ionisx-container();
 
             box-shadow: none;
             border: 0 none;
