Hide register link from header

--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -60,6 +60,10 @@ header.global, header.global.slim {
                     color: @white;
                 }
             }
+
+            .cta-register {
+                display: none;
+            }
         }
 
         ol.nav-courseware {
