--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -55,6 +55,13 @@ span {
     font: inherit;
 }
 
+input[type=text],
+input[type=email],
+input[type=password],
+textarea {
+    .ionisx-input();
+}
+
 
 // Ugly things go here for now :
 
