Start styling login page

--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -74,6 +74,7 @@ body,
     @import 'dashboard.less';
 
     @import 'register.less';
+    @import 'login.less';
 
     @import 'course/main.less';
 }
