Use @default-border-radius variable

--- a/static/less/global/modal.less
+++ b/static/less/global/modal.less
@@ -38,7 +38,7 @@
         background: none;
         background-color: @gg-grey;
         border: 1px solid fadeout(@black, 20%);
-        border-radius: 4px;
+        border-radius: @default-border-radius;
         padding: 0;
 
         .close-modal {
@@ -89,7 +89,7 @@
 
             input, textarea {
                 font: inherit;
-                border-radius: 4px;
+                border-radius: @default-border-radius;
                 border: 1px solid @gg-border-grey;
                 outline: none;
             }
