--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -20,7 +20,7 @@ section.course-info {
             .table {
                 background-color: @gg-grey;
                 display: block;
-                border-radius: 4px;
+                border-radius: @default-border-radius;
 
                 .intro {
                     .square(auto);
@@ -131,7 +131,7 @@ section.course-info {
                                 margin: 0 20px 0 0;
                                 padding: 7px 0;
                                 border: 1px solid @gg-border-grey;
-                                border-radius: 4px;
+                                border-radius: @default-border-radius;
                                 background-color: @white;
                                 line-height: @line-height-base;
                             }
