--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -111,7 +111,7 @@
                 .size(200px, auto);
                 .pull-left();
 
-                border-radius: 4px;
+                border-radius: @default-border-radius;
                 background-color: @white;
                 transition: none;
                 max-height: none;
