Update global overlay style

--- a/static/less/global/modal.less
+++ b/static/less/global/modal.less
@@ -1,3 +1,8 @@
+#lean_overlay {
+    background: none;
+    background-color: fadeout(@black, 40%);
+}
+
 .modal, .leanModal_box {
     .ionisx-modal();
 
@@ -6,7 +11,6 @@
         .ionisx-video-modal();
     }
 }
-
 
 #forgot-password-modal {
     .ionisx-modal();
