Add checkbox style

--- a/static/less/pages/login.less
+++ b/static/less/pages/login.less
@@ -39,6 +39,18 @@
             label {
                 font: inherit;
                 color: inherit;
+                text-shadow: none;
+            }
+
+            input {
+                font: inherit;
+                color: inherit;
+                display: inline-block;
+                margin: 0;
+            }
+
+            div.squaredThree {
+                .ionisx-checkbox();
             }
 
             input[type=text],
