--- a/static/less/mixins/main.less
+++ b/static/less/mixins/main.less
@@ -1,5 +1,6 @@
 @import 'container.less';
 @import 'input.less';
+@import 'checkbox.less';
 @import 'button.less';
 @import 'table.less';
 @import 'alert.less';
