Style input placeholders

--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -63,6 +63,26 @@ textarea {
     .ionisx-input();
 }
 
+::-webkit-input-placeholder {
+    font: inherit;
+    color: @gg-disabled-grey;
+}
+
+:-moz-placeholder {
+    font: inherit;
+    color: @gg-disabled-grey;
+}
+
+::-moz-placeholder {
+    font: inherit;
+    color: @gg-disabled-grey;
+}
+
+:-ms-input-placeholder {
+    font: inherit;
+    color: @gg-disabled-grey;
+}
+
 
 // Ugly things go here for now :
 
