Style static pages

--- a/static/less/pages/main.less
+++ b/static/less/pages/main.less
@@ -2,19 +2,6 @@ body,
 .view-login,
 .view-register,
 .view-passwordreset {
-    // .container {
-    //     .ionisx-container();
-    // }
-
-    // .static-container,
-    // nav.course-material .inner-wrapper {
-    //     .square(auto);
-    //     .container();
-
-    //     min-width: 0;
-    //     max-width: none;
-    // }
-
     .content-wrapper {
         .square(auto);
 
@@ -68,6 +55,8 @@ body,
             }
         }
     }
+
+    @import 'static.less';
 
     @import 'homepage.less';
     @import 'courses.less';
