Update black color

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -3,7 +3,7 @@
 ////////////////////////////////////////////////////////////////////////
 
 @white: #fff;
-@black: #000;
+@black: lighten(#000, 8%);
 
 @gg-blue: #3ea5ce;
 @gg-grey: #eef0f1;
