Reset body style

--- a/static/less/reset.less
+++ b/static/less/reset.less
@@ -3,6 +3,9 @@ body {
     font-size: @font-size-base;
     color: @black;
     -webkit-font-smoothing: auto;
+    min-width: 0;
+    min-height: 0;
+    background: none;
 }
 
 h1 {
